--- a/positive-and-negative-parenting/positive-and-negative-parenting.html
+++ b/positive-and-negative-parenting/positive-and-negative-parenting.html
@@ -7,9 +7,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Andy Grogan-Kaylor">
-<meta name="dcterms.date" content="2026-02-09">
+<meta name="dcterms.date" content="2026-02-26">
 
-<title>Positive and Negative Parenting and Child Development Outcomes</title>
+<title>Positive and Negative Parenting, and Child Development Outcomes</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -54,19 +54,19 @@ ul.task-list li input[type="checkbox"] {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-narrative-text-color-overlay: black;
---cr-narrative-background-color-overlay: lightgrey;
---cr-section-background-color: white;
---cr-narrative-background-color-sidebar: white;
+          --cr-section-background-color: white;
 --cr-narrative-text-color-sidebar: black;
+--cr-narrative-background-color-sidebar: white;
+--cr-narrative-text-color-overlay: black;
+--cr-narrative-background-color-overlay: lightgrey;
         }
       </style>
     
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Positive and Negative Parenting and Child Development Outcomes</h1>
-<p class="subtitle lead">Variation and Commonality Across Multiple Countries</p>
+<h1 class="title">Positive and Negative Parenting, and Child Development Outcomes</h1>
+<p class="subtitle lead">Variation, Commonality and Possible Universals Across Multiple Countries</p>
 </div>
 
 
@@ -83,7 +83,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">February 9, 2026</p>
+      <p class="date">February 26, 2026</p>
     </div>
   </div>
   
